; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/cudbg/extr_cudbg_common.c_init_cudbg_hdr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/cudbg/extr_cudbg_common.c_init_cudbg_hdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cudbg_init_hdr = type { i32, i32, i32, i32 }

@CUDBG_MAJOR_VERSION = common dso_local global i32 0, align 4
@CUDBG_MINOR_VERSION = common dso_local global i32 0, align 4
@CUDBG_BUILD_VERSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cudbg_init_hdr*)* @init_cudbg_hdr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_cudbg_hdr(%struct.cudbg_init_hdr* %0) #0 {
  %2 = alloca %struct.cudbg_init_hdr*, align 8
  store %struct.cudbg_init_hdr* %0, %struct.cudbg_init_hdr** %2, align 8
  %3 = load i32, i32* @CUDBG_MAJOR_VERSION, align 4
  %4 = load %struct.cudbg_init_hdr*, %struct.cudbg_init_hdr** %2, align 8
  %5 = getelementptr inbounds %struct.cudbg_init_hdr, %struct.cudbg_init_hdr* %4, i32 0, i32 3
  store i32 %3, i32* %5, align 4
  %6 = load i32, i32* @CUDBG_MINOR_VERSION, align 4
  %7 = load %struct.cudbg_init_hdr*, %struct.cudbg_init_hdr** %2, align 8
  %8 = getelementptr inbounds %struct.cudbg_init_hdr, %struct.cudbg_init_hdr* %7, i32 0, i32 2
  store i32 %6, i32* %8, align 4
  %9 = load i32, i32* @CUDBG_BUILD_VERSION, align 4
  %10 = load %struct.cudbg_init_hdr*, %struct.cudbg_init_hdr** %2, align 8
  %11 = getelementptr inbounds %struct.cudbg_init_hdr, %struct.cudbg_init_hdr* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load %struct.cudbg_init_hdr*, %struct.cudbg_init_hdr** %2, align 8
  %13 = getelementptr inbounds %struct.cudbg_init_hdr, %struct.cudbg_init_hdr* %12, i32 0, i32 0
  store i32 4, i32* %13, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
